--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ hishel = ">=0.0.21,<0.0.26"
 sentry-sdk = "^1.44.0"
 essentials-configuration = "^2.0.4"
 rodi = "^2.0.6"
+pyyaml = "^6.0.1"
 
 [tool.poetry.dependencies.whistle]
 path = "./vendors/whistle"
