--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,10 +42,8 @@ sentry-sdk = "^1.44.0"
 essentials-configuration = "^2.0.4"
 rodi = "^2.0.6"
 pyyaml = "^6.0.1"
+whistle = { version = "2.0.0a1", allow-prereleases = true }
 
-[tool.poetry.dependencies.whistle]
-path = "./vendors/whistle"
-develop = true
 
 [tool.poetry.group.dev.dependencies]
 asgi-tools = "^0.76.0"
