--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,6 +5,14 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.12"
+  jobs:
+    pre_create_environment:
+      - asdf plugin add poetry
+      - asdf install poetry latest
+      - asdf global poetry latest
+      - poetry config virtualenvs.create false
+    post_install:
+      - poetry install -E dev
 
 sphinx:
   configuration: docs/conf.py
