--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -6,13 +6,10 @@ build:
   tools:
     python: "3.12"
   jobs:
-    pre_create_environment:
-      - asdf plugin add poetry
-      - asdf install poetry latest
-      - asdf global poetry latest
-      - poetry config virtualenvs.create false
+    post_create_environment:
+      - pip install poetry
     post_install:
-      - poetry install -E dev
+      - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH poetry install --with dev -E dev
 
 sphinx:
   configuration: docs/conf.py
