--- a/harp_apps/dashboard/frontend/package.json
+++ b/harp_apps/dashboard/frontend/package.json
@@ -38,9 +38,11 @@
     "@sentry/browser": "^7.116.0",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
+    "@types/lodash": "^4.17.4",
     "date-fns": "^3.6.0",
     "http-status-codes": "^2.3.0",
     "localforage": "^1.10.0",
+    "lodash": "^4.17.21",
     "match-sorter": "^6.3.4",
     "prismjs": "^1.29.0",
     "prop-types": "^15.8.1",
