--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,25 +50,25 @@ whistle = { version = "2.0.0a1", allow-prereleases = true }
 [tool.poetry.group.dev.dependencies]
 asgi-tools = "^0.76.0"
 black = ">=23.12,<25.0"
+freezegun = "^1.5.1"
 furo = ">=2023.9.10,<2025.0.0"
 isort = "^5.13.2"
 pre-commit = "^3.7.1"
 pytest = ">=7.4.3,<9.0.0"
 pytest-asyncio = ">=0.21.1,<0.23.0" # 0.23 breaks the test suite (https://github.com/pytest-dev/pytest-asyncio/releases/tag/v0.23.0)
-respx = ">=0.20.2,<0.22.0"
-sphinx = "^7.3.7"
-sphinx-autobuild = ">=2021.3.14,<2025.0.0"
-sphinx-design = "^0.5.0"
-sphinxcontrib-jquery = "^4.1"
 pytest-benchmark = { extras = ["histogram"], version = "^4.0.0" }
 pytest-cov = ">=4.1,<6.0"
-sphinx-copybutton = "^0.5.2"
-sphinx-sitemap = "^2.6.0"
-ruff = "^0.4.8"
 pytest-xdist = { version = "^3.6.1", extras = ["psutil"] }
-freezegun = "^1.5.1"
-testcontainers = { extras = ["postgres"], version = ">=4.3.0,<4.4" }
-sphinx-click = "^5.2.1"
+respx = ">=0.20.2,<0.22.0"
+ruff = "^0.4.8"
+sphinx = "^7.3.7"
+sphinx-autobuild = ">=2021.3.14,<2025.0.0"
+sphinx-click = "^6.0.0"
+sphinx-copybutton = "^0.5.2"
+sphinx-design = "^0.6.0"
+sphinx-sitemap = "^2.6.0"
+sphinxcontrib-jquery = "^4.1"
+testcontainers = { extras = ["postgres"], version = "~4.5.1" }
 
 
 [tool.poetry.group.mysql.dependencies]
