--- a/docs/apps/http_client/examples/full.yml
+++ b/docs/apps/http_client/examples/full.yml
@@ -15,7 +15,7 @@ http_client:
     # Override the cache controller definition (optional)
     controller:
       # This is the default, only set if you want to use a custom controller.
-      "@type": "hishel.Controller"
+      "@type": "hishel:Controller"
 
       # You can configure anything the hishel cache controller would accept as a keyword argument.
       # See https://hishel.com/advanced/controllers/ for more information.
@@ -45,7 +45,7 @@ http_client:
     # Please note that we plan to allow to share other harp storages here in the future.
     storage:
       # This is the default, only set if you want to use a custom cache storage.
-      "@type": "hishel.AsyncFileStorage"
+      "@type": "hishel:AsyncFileStorage"
 
       # If your hishel compatible storage class take more kwargs, you can pass more stuff here.
       # See https://hishel.com/advanced/storages/
