--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ sqlalchemy-utils = "^0.41.1"
 structlog = "^24.2.0"
 svix-ksuid = "^0.6.2"
 watchfiles = { version = "^0.22.0", optional = true }
-whistle = { version = "2.0.0a1", allow-prereleases = true }
+whistle = { version = "2.0.0b1", allow-prereleases = true }
 
 
 [tool.poetry.group.dev.dependencies]
