--- a/harp_apps/dashboard/frontend/package.json
+++ b/harp_apps/dashboard/frontend/package.json
@@ -39,6 +39,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
     "@types/lodash": "^4.17.4",
+    "@types/react-helmet": "^6.1.11",
     "date-fns": "^3.6.0",
     "http-status-codes": "^2.3.0",
     "localforage": "^1.10.0",
@@ -49,6 +50,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
+    "react-helmet": "^6.1.0",
     "react-is": "18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.23.1",
