--- a/harp_apps/dashboard/frontend/package.json
+++ b/harp_apps/dashboard/frontend/package.json
@@ -35,6 +35,7 @@
     "@headlessui/react": "1.7.18",
     "@heroicons/react": "^2.1.3",
     "@ladle/react": "^4.1.0",
+    "@react-hook/window-size": "^3.1.1",
     "@sentry/browser": "^7.116.0",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
