--- a/misc/helm/charts/harp-proxy/Chart.yaml
+++ b/misc/helm/charts/harp-proxy/Chart.yaml
@@ -3,7 +3,7 @@ name: harp-proxy
 description: HTTP API Runtime Proxy
 type: application
 version: "0.1.0"
-appVersion: "0.5.0b12"
+appVersion: "0.5.0rc1"
 
 dependencies:
   - name: postgresql
