--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ svix-ksuid = "^0.6.2"
 watchfiles = { version = "^0.22.0", optional = true }
 whistle = { version = "2.0.0b1", allow-prereleases = true }
 pyheck = "^0.1.5"
+asgi-prometheus = "^1.1.2"
 
 
 [tool.poetry.group.dev.dependencies]
