--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,7 +11,7 @@ build:
     post_install:
       - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH poetry install --with dev -E dev
     post_build:
-      - echo "google-site-verification: google72e937875c790d13.html" > $READTHEDOCS_OUTPUT/html/google72e937875c790d13.html
+      - 'echo "google-site-verification: google72e937875c790d13.html" > $READTHEDOCS_OUTPUT/html/google72e937875c790d13.html'
 
 sphinx:
   configuration: docs/conf.py
