--- a/docs/apps/dashboard/examples/devserver.yml
+++ b/docs/apps/dashboard/examples/devserver.yml
@@ -1,3 +1,3 @@
 dashboard.devserver:
-  # force disabling the devserver, otherwise, it will be enabled based on availability
-  enabled: false
+  enabled: true  # default based on availability
+  port: 11111  # default to a high available port
