--- a/misc/helm/charts/harp-proxy/templates/deployment.yaml
+++ b/misc/helm/charts/harp-proxy/templates/deployment.yaml
@@ -33,6 +33,9 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          env:
+            - name: USE_PROMETHEUS
+              value: 'true'
           ports:
             - name: http
               containerPort: {{ .Values.service.port }}
